chore: homepage redesign
*chore: add new fonts
*chore: fix Hero image not changing colors on system theme
*chore: add new default font to components
*chore: add animation for arrows on hover

--- a/src/pages/get-started/setup-clerk.mdx
+++ b/src/pages/get-started/setup-clerk.mdx
@@ -71,21 +71,21 @@ Creating a Clerk account and using it in your apps is a simple three-step proces
 
   <div className="container mx-auto my-4">
     <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-      <FrameworkCards title="React" description="Get started installing and initializing Clerk in a new Create React App." link="/quickstarts/frontend/react" cta="Get Started" logo="/images/logos/react.svg" />
+      <FrameworkCards title="React" description="Get started installing and initializing Clerk in a new Create React App." link="/quickstarts/frontend/react" cta="Get Started" icon="/images/logos/react.svg" />
 
-      <FrameworkCards title="Next.js" description="Easily add secure, beautiful, and fast authentication to Next.js with Clerk." link="/quickstarts/full-stack/stable" cta="Get Started" logo="/images/logos/nextjs.svg" logoWidth="40" />
+      <FrameworkCards title="Next.js" description="Easily add secure, beautiful, and fast authentication to Next.js with Clerk." link="/quickstarts/full-stack/stable" cta="Get Started" icon="/images/logos/nextjs.svg" iconWidth="40" />
 
-      <FrameworkCards title="Remix" description="Easily add secure, edge- and SSR-friendly authentication to Remix with Clerk." link="/quickstarts/full-stack/remix" cta="Get Started" logo="/images/logos/remix.svg" />
+      <FrameworkCards title="Remix" description="Easily add secure, edge- and SSR-friendly authentication to Remix with Clerk." link="/quickstarts/full-stack/remix" cta="Get Started" icon="/images/logos/remix.svg" />
 
-      <FrameworkCards title="RedwoodJS" description="Grow your RedwoodJS application with Clerk user management and authentication." link="/quickstarts/full-stack/remix" cta="Get Started" logo="/images/logos/redwood.svg" />
+      <FrameworkCards title="RedwoodJS" description="Grow your RedwoodJS application with Clerk user management and authentication." link="/quickstarts/full-stack/remix" cta="Get Started" icon="/images/logos/redwood.svg" />
 
-      <FrameworkCards title="Expo / React Native" description="Use Clerk with Expo to authenticate users in your React Native application." link="/quickstarts/native/expo" cta="Get Started" logo="/images/logos/expo.svg" />
+      <FrameworkCards title="Expo / React Native" description="Use Clerk with Expo to authenticate users in your React Native application." link="/quickstarts/native/expo" cta="Get Started" icon="/images/logos/expo.svg" />
 
-      <FrameworkCards title="Express.js" description="Add authentication and user management to your Express.js application." link="#" cta="Coming Soon" hideArrow={true} logo="/images/logos/express.svg" logoWidth="30" />
+      <FrameworkCards title="Express.js" description="Add authentication and user management to your Express.js application." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/express.svg" iconWidth="30" />
 
-      <FrameworkCards title="Fastify" description="Learn about installing and initializing Clerk in a new Fastify application." link="#" cta="Coming Soon" hideArrow={true} logo="/images/logos/fastify.svg" logoWidth="40" />
+      <FrameworkCards title="Fastify" description="Learn about installing and initializing Clerk in a new Fastify application." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/fastify.svg" iconWidth="40" />
 
-      <FrameworkCards title="Ruby / Rails" description="Integrate user management and authentication into your Ruby application." link="#" cta="Coming Soon" hideArrow={true} logo="/images/logos/ruby.svg" />
+      <FrameworkCards title="Ruby / Rails" description="Integrate user management and authentication into your Ruby application." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/ruby.svg" />
     </div>
   </div>
 </Steps>
