chore: homepage redesign
* chore: style Cards component to match current docs
* chore: style FrameworkCards component to match current docs
* chore: style Hero component to match current docs
* chore: add and style Subheader component to match current docs

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,10 +1,11 @@
 import {Hero} from "@/components/Hero";
 import {Cards} from "@/components/Cards";
 import {FrameworkCards} from "@/components/FrameworkCards"
+import {Subheader} from "@/components/Subheader"
 
 <Hero/>
 <div className="container mx-auto my-4">
-  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+  <div className="flex flex-wrap justify-between px-12 sm:px-0 w:full">
     <FrameworkCards
       title="Next.js Stable"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application."
@@ -52,7 +53,7 @@ import {FrameworkCards} from "@/components/FrameworkCards"
   </div>
 </div>
 
-## Components
+<Subheader text="Components"/>
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
@@ -83,7 +84,7 @@ import {FrameworkCards} from "@/components/FrameworkCards"
   </div>
 </div>
 
-## Hooks
+<Subheader text="Hooks"/>
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
@@ -104,7 +105,7 @@ import {FrameworkCards} from "@/components/FrameworkCards"
 
 </div>
 
-## SDKS
+<Subheader text="SDKs"/>
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
