--- a/src/pages/troubleshooting/email-deliver.mdx
+++ b/src/pages/troubleshooting/email-deliver.mdx
@@ -76,7 +76,7 @@ Another thing you can do is sign up for [Sender Support](https://sendersupport.o
 
 ## Managing your own Email delivery
 
-In case you would like to manage Email and/or SMS delivery on your own, you can opt-out of delivery by Clerk, as documented in the Email & SMS templates section.
+In case you would like to manage Email and/or SMS delivery on your own, you can opt-out of delivery by Clerk, by toggling the "Send by Clerk" toggle in the dashboard.
 
 <Images
   src="/images/troubleshooting/send-own-email.png"
