fix: small main page ui fixes
* fix: adjust flexbox spacing for framework cards
* fix: adjust hero image height
* fix: adjust framework card width

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -5,7 +5,7 @@ import {Subheader} from "@/components/Subheader"
 
 <Hero/>
 <div className="container mx-auto my-4">
-  <div className="flex flex-wrap justify-between px-12 sm:px-0 w:full">
+  <div className="flex flex-wrap 2xl:justify-between px-12 sm:px-0 w:full md:justify-around justify-center">
     <FrameworkCards
       title="Next.js Stable"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application."
