chore: replace production links with beta links

--- a/src/pages/users/authentication-providers/apple.mdx
+++ b/src/pages/users/authentication-providers/apple.mdx
@@ -10,7 +10,7 @@ In this guide, we'll see how we can add **Sign In with Apple** to your Clerk ins
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](https://clerk.com/docs/authentication/set-up-your-application).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/get-started/setup-clerk).
 - You need to have an Apple Developer account. To create one, visit the [Apple Developer portal](https://developer.apple.com/).
 
 ## Configuring Apple social connection
@@ -169,7 +169,7 @@ If you completed the previous steps of this guide, by now you should have  the f
 
 Don't worry, the hard part is over. Now you can go to your instance's settings in the Dashboard, and navigate to the **Social Connections** settings under **User & Authentication**. Find the **Apple** provider from the list, toggle it on and click on the gear icon.
 
-In the modal, you'll see all the corresponding fields that you should  paste the aforementioned values into. For the private key file, open it  with a text editor and just copy/paste the contents. 
+In the modal, you'll see all the corresponding fields that you should  paste the aforementioned values into. For the private key file, open it  with a text editor and just copy/paste the contents.
 
 After filling in the settings, you'll end up with something roughly like this:
 
