--- a/src/pages/users/authentication-providers/atlassian.mdx
+++ b/src/pages/users/authentication-providers/atlassian.mdx
@@ -6,7 +6,7 @@ How to set up social connection with Atlassian
 
 Adding social connection with Atlassian to your app with Clerk is straightforward - you will need to populate the **Client ID**, **Client Secret** and **Authorized redirect URI** in your instance settings.
 
-To make the development flow as smooth as possible, Clerk uses  preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed. 
+To make the development flow as smooth as possible, Clerk uses  preconfigured shared OAuth credentials and redirect URIs for development instances - no other configuration is needed.
 
 For production instances, you will need to generate your own Client ID and Client Secret using your Atlassian account.
 
@@ -14,7 +14,7 @@ For production instances, you will need to generate your own Client ID and Clien
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](https://clerk.com/docs/authentication/set-up-your-application).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/get-started/setup-clerk).
 - You need to have a Atlassian developer account. To create one, [click here](https://developer.atlassian.com/).
 
 ## Configuring an Atlassian OAuth 2.0 Integration
@@ -55,7 +55,7 @@ After entering the callback URL, the Client ID & Client Secret will now be avail
 
 You will need to copy these values and paste:
 
-- The Atlassian Client ID to the **Client ID** input on Clerk 
+- The Atlassian Client ID to the **Client ID** input on Clerk
 - The Atlassian Client Secret to the **Client Secret** input on Clerk
 
 ![Client ID and Client Secret inputs for Atlassian connection](./atlassian/6ef7100945fb68a379b35a5c295a76405a2cf10e-1156x1354.png)
