--- a/src/pages/migrations-deployments/deployment-guides/vercel.mdx
+++ b/src/pages/migrations-deployments/deployment-guides/vercel.mdx
@@ -70,6 +70,6 @@ However, **if you wish to use your production Clerk keys with a preview Vercel d
 
 We do this to ensure your users' security by restricting production redirects to fall under your production domain. This prevents bad actors from maliciously requesting login access to their own domains.
 
-> We take security very seriously at Clerk. To learn more about how we ensure your user's security, [please refer to our docs on the subject.](https://clerk.com/docs/security/introduction)
+> We take security very seriously at Clerk. To learn more about how we ensure your user's security, [please refer to our docs on the subject.](/security/security-overview)
 
 > Please note that modifying the Preview Deployment Suffix is only available as an add-on to Vercel's Pro plans and above.
