--- a/src/pages/users/authentication-providers/google.mdx
+++ b/src/pages/users/authentication-providers/google.mdx
@@ -14,7 +14,7 @@ For production instances, you will need to create your own developer account wit
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](https://clerk.com/docs/authentication/set-up-your-application).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/get-started/setup-clerk).
 - You need to have a Google Developer account. To create one, visit the [Google Cloud console](https://console.developers.google.com/).
 
 ## Configuring Google social connection
