--- a/src/pages/users/authentication-providers/hubspot.mdx
+++ b/src/pages/users/authentication-providers/hubspot.mdx
@@ -14,7 +14,7 @@ For production instances, you will need to create your own developer account wit
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](https://clerk.com/docs/authentication/set-up-your-application).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/get-started/setup-clerk).
 - You need to have a HubSpot Developer account. To create one, [click here](https://app.hubspot.com/signup/developers/step/existing-user?_ga=2.145169076.1430980384.1628431607-741498900.1628431607).
 
 ## Configuring HubSpot social connection
