--- a/src/pages/users/authentication-providers/slack.mdx
+++ b/src/pages/users/authentication-providers/slack.mdx
@@ -16,7 +16,7 @@ For production instances, you will need to generate your own Client ID and Clien
 
 ## Before you start
 
-- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](https://clerk.com/docs/authentication/set-up-your-application).
+- You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/). For more information, check out our [Set up your application guide](/get-started/setup-clerk).
 - You need to have a Slack account. To create one, [click here](https://slack.com/get-started#/createnew).
 
 ## Configuring Slack social connection
