--- a/src/pages/users/guides/email-password.mdx
+++ b/src/pages/users/guides/email-password.mdx
@@ -682,6 +682,8 @@ export default function SignUpScreen() {
 
 ### Create Sign In Flow
 
+In email/password authentication, the sign-in is a process that requires users to provide their email address and their password and authenticates them by creating a new session for the user.
+
 <Tabs items={["Next.js","React","Remix", "Gatsby", "Expo", "JavaScript"]}>
 
 <Tab>
