chore: fix card responsiveness
*fix: add gap between cards
*fix: add custom font sizes to match current docs

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -5,7 +5,7 @@ import {Subheader} from "@/components/Subheader"
 
 <Hero/>
 <div className="container mx-auto my-4">
-  <div className="flex flex-wrap 2xl:justify-between px-12 sm:px-0 w:full md:justify-around justify-center">
+  <div className="grid xl:grid-cols-3 xl:grid-rows-2 md:grid-cols-2 md:grid-rows-3 justify-center gap-x-7">
     <FrameworkCards
       title="Next.js Stable"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application."
@@ -56,7 +56,7 @@ import {Subheader} from "@/components/Subheader"
 <Subheader text="Components"/>
 
 <div className="container mx-auto my-4">
-  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+  <div className="grid xl:grid-cols-2 auto-rows-auto md:grid-cols-2 gap-x-7 justify-items-stretch">
     <Cards
       title="Authentication"
       description="Learn about the authentication components that Clerk provides and how to use them."
@@ -87,7 +87,7 @@ import {Subheader} from "@/components/Subheader"
 <Subheader text="Hooks"/>
 
 <div className="container mx-auto my-4">
-  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+  <div className="grid xl:grid-cols-2 auto-rows-auto md:grid-cols-2 gap-x-7 justify-items-stretch">
     <Cards
       title="User Management"
       description="Learn about the user management hooks that Clerk provides and how to use them."
@@ -108,7 +108,7 @@ import {Subheader} from "@/components/Subheader"
 <Subheader text="SDKs"/>
 
 <div className="container mx-auto my-4">
-  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+  <div className="grid xl:grid-cols-2 auto-rows-auto md:grid-cols-2 gap-x-7 justify-items-stretch">
     <Cards
       title="Next.js"
       description="Learn about the Next.js SDK that Clerk provides and it's unique features."
