chore: add icons to home page cards
*chore: add icons for home page cards
*chore: add clerk purple color to tailwind config
*chore: adjust colors on home page to use new purple

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -62,24 +62,36 @@ import {Subheader} from "@/components/Subheader"
       description="Learn about the authentication components that Clerk provides and how to use them."
       link="/authentication-components/sign-in"
       cta="Learn More"
+      icon="/images/icons/authentication.svg"
+      iconWidth={19.2}
+      iconHeight={19.19}
     />
     <Cards
       title="User Management"
       description="Learn about the user management components that Clerk provides and how to use them."
       link="/user-management-components/signed-in"
       cta="Learn More"
+      icon="/images/icons/users.svg"
+      iconWidth={16.8}
+      iconHeight={18}
     />
     <Cards
       title="Organization Management"
       description="Learn about the organization management components that Clerk provides and how to use them."
       link="/organization-management-components/create-organization"
       cta="Learn More"
+      icon="/images/icons/organizations.svg"
+      iconWidth={21.6}
+      iconHeight={18}
     />
     <Cards
       title="Customization & Localization"
       description="Learn how to customize and localize the Clerk components."
       link="/customization/appearance"
       cta="Learn More"
+      icon="/images/icons/customization.svg"
+      iconWidth={19.2}
+      iconHeight={19.2}
     />
   </div>
 </div>
@@ -93,6 +105,9 @@ import {Subheader} from "@/components/Subheader"
       description="Learn about the user management hooks that Clerk provides and how to use them."
       link="/user-management-hooks/use-user"
       cta="Learn More"
+      icon="/images/icons/users.svg"
+      iconWidth={16.8}
+      iconHeight={18}
     />
 
     <Cards
@@ -100,6 +115,9 @@ import {Subheader} from "@/components/Subheader"
       description="Learn about the authentication hooks that Clerk provides and how to use them"
       link="/authentication-hooks/use-sign-in"
       cta="Learn More"
+      icon="/images/icons/authentication.svg"
+      iconWidth={19.2}
+      iconHeight={19.19}
     />
     </div>
 
@@ -114,12 +132,17 @@ import {Subheader} from "@/components/Subheader"
       description="Learn about the Next.js SDK that Clerk provides and it's unique features."
       link="/next-sdk/get-auth"
       cta="Learn More"
+      icon="/images/logos/nextjs.svg"
+      iconWidth="40"
     />
     <Cards
       title="Shared"
       description="Learn about Clerk SDK methods that are shared across each framework."
       link="/shared-sdk/use-auth"
       cta="Learn More"
+      icon="/images/icons/sdks.svg"
+      iconWidth={19.2}
+      iconHeight={16.8}
     />
   </div>
 </div>
