chore: remove -button prefix from non-button components

--- a/src/pages/reference-js/authentication/sign-in.mdx
+++ b/src/pages/reference-js/authentication/sign-in.mdx
@@ -25,11 +25,11 @@ Render the `SignIn` component to an HTML `<div>` element.
 
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
-      id="sign-in-button"
+      id="sign-in"
     ></div>
   `;
 
-  const signInComponent = document.querySelector<HTMLDivElement>('#sign-in-button')!;
+  const signInComponent = document.querySelector<HTMLDivElement>('#sign-in')!;
 
   const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
   await clerk.load();
@@ -42,7 +42,7 @@ Render the `SignIn` component to an HTML `<div>` element.
   ```
 
   ```html {13-17}
-  <div id="sign-in-button"></div>
+  <div id="sign-in"></div>
   <script>
     const script = document.createElement('script');
     script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
@@ -52,7 +52,7 @@ Render the `SignIn` component to an HTML `<div>` element.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      const signInComponent = document.querySelector('#sign-in-button');
+      const signInComponent = document.querySelector('#sign-in');
 
       window.Clerk.openSignIn(signInComponent, {
         appearance: {
@@ -103,11 +103,11 @@ Unmount and run cleanup on an existing SignIn component instance.
 
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
-      id="sign-in-button"
+      id="sign-in"
     ></div>
   `
 
-  const signInComponent = document.querySelector<HTMLDivElement>('#sign-in-button')!;
+  const signInComponent = document.querySelector<HTMLDivElement>('#sign-in')!;
 
   const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
 
@@ -121,7 +121,7 @@ Unmount and run cleanup on an existing SignIn component instance.
   ```
 
   ```html {17}
-  <div id="sign-in-button"></div>
+  <div id="sign-in"></div>
   <script>
     const script = document.createElement('script');
     script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
@@ -131,7 +131,7 @@ Unmount and run cleanup on an existing SignIn component instance.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      const signInComponent = document.querySelector('#sign-in-button');
+      const signInComponent = document.querySelector('#sign-in');
 
       window.Clerk.mountSignIn(signInComponent);
 
