--- a/src/pages/reference-js/authentication/sign-up.mdx
+++ b/src/pages/reference-js/authentication/sign-up.mdx
@@ -25,11 +25,11 @@ Render the `SignUp` component to an HTML `<div>` element.
 
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
-      id="sign-up-button"
+      id="sign-up"
     ></div>
   `;
 
-  const signUpComponent = document.querySelector<HTMLDivElement>('#sign-up-button')!;
+  const signUpComponent = document.querySelector<HTMLDivElement>('#sign-up')!;
 
   const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
   await clerk.load();
@@ -42,7 +42,7 @@ Render the `SignUp` component to an HTML `<div>` element.
   ```
 
   ```html {13-17}
-  <div id="sign-up-button"></div>
+  <div id="sign-up"></div>
   <script>
     const script = document.createElement('script');
     script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
@@ -52,7 +52,7 @@ Render the `SignUp` component to an HTML `<div>` element.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      const signUpComponent = document.querySelector('#sign-up-button');
+      const signUpComponent = document.querySelector('#sign-up');
 
       window.Clerk.openSignUp(signUpComponent, {
         appearance: {
@@ -103,11 +103,11 @@ Unmount and run cleanup on an existing SignUp component instance.
 
   document.querySelector<HTMLDivElement>('#app')!.innerHTML = `
     <div
-      id="sign-up-button"
+      id="sign-up"
     ></div>
   `
 
-  const signUpComponent = document.querySelector<HTMLDivElement>('#sign-up-button')!;
+  const signUpComponent = document.querySelector<HTMLDivElement>('#sign-up')!;
 
   const clerk = new Clerk(import.meta.env.VITE_CLERK_PUBLISHABLE_KEY);
 
@@ -121,7 +121,7 @@ Unmount and run cleanup on an existing SignUp component instance.
   ```
 
   ```html {17}
-  <div id="sign-up-button"></div>
+  <div id="sign-up"></div>
   <script>
     const script = document.createElement('script');
     script.setAttribute('data-clerk-publishable-key', 'pk_[publishable_key]');
@@ -131,7 +131,7 @@ Unmount and run cleanup on an existing SignUp component instance.
     script.addEventListener('load', async function () {
       await window.Clerk.load();
 
-      const signUpComponent = document.querySelector('#sign-up-button');
+      const signUpComponent = document.querySelector('#sign-up');
 
       window.Clerk.mountSignUp(signUpComponent);
 
