docs: document missing additionalOAuthScopes property

--- a/src/pages/reference-react/authentication/user-profile.mdx
+++ b/src/pages/reference-react/authentication/user-profile.mdx
@@ -48,28 +48,37 @@ export default function UserProfilePage() {
 
 ## Props
 
+All props below are optional.
+
 <Tables
   headings={["Name", "Type", "Description"]}
   rows={[
     {
-      cells: ["appearance", "object", `Controls the overall look and feel.`],
+      cells: [<code>appearance</code>, <code>object</code>, `Controls the overall look and feel.`],
     },
     {
       cells: [
-        "routing",
-        "RoutingStrategy",
+        <code>routing</code>,
+        <code>RoutingStrategy</code>,
         `The routing strategy for your pages. Supported values are:
--hash (default): Hash based routing.
--path: Path based routing.`,
+- Hash (default): Hash based routing.
+- Path: Path based routing.`,
       ],
     },
     {
       cells: [
-        "path",
-        "string",
-        `string
-The path where the component is mounted when path-based routing is used.
--e.g. /user-profile. This prop is ignored in hash-based routing.`,
+        <code>path</code>,
+        <code>string</code>,
+        <>The path where the component is mounted when path-based routing is used.
+        <br/>e.g. <code>/user-profile</code>. This prop is ignored in hash-based routing.</>
+      ],
+    },
+    {
+      cells: [
+        <code>additionalOAuthScopes</code>,
+        <code>object</code>,
+        <>Specify additional scopes per OAuth provider that your users would like to provide if not already approved.
+        <br/>e.g. <code>{`{google: ['foo', 'bar'], github: ['qux']}`}</code></>
       ],
     },
   ]}
