docs: add organization profile docs reference page

--- a/src/pages/reference-react/organization-management/organization-profile.mdx
+++ b/src/pages/reference-react/organization-management/organization-profile.mdx
@@ -43,27 +43,29 @@ export default function OrganizationProfilePage() {
 
 ## Props
 
+All props below are optional.
+
 <Tables
   headings={["Name", "Type", "Description"]}
   rows={[
     {
       cells: [
-        "afterLeaveOrganizationUrl?",
-        "string",
+        <code>afterLeaveOrganizationUrl</code>,
+        <code>string</code>,
         "Full URL or path to navigate after leaving an organization.",
       ],
     },
     {
       cells: [
-        "path",
-        "string",
+        <code>path</code>,
+        <code>string</code>,
         "The path where the component is mounted when path-based routing is used. -e.g. /org-profile. This prop is ignored in hash and virtual based routing.",
       ],
     },
     {
       cells: [
-        "routing",
-        "RoutingStrategy",
+        <code>routing</code>,
+        <code>RoutingStrategy</code>,
         `The routing strategy for your pages. Supported values are:
 - hash (default): Hash based routing.
 - path: Path based routing.
@@ -72,8 +74,8 @@ export default function OrganizationProfilePage() {
     },
     {
       cells: [
-        "appearance",
-        "object",
+        <code>appearance</code>,
+        <code>object</code>,
         "Control the look and feel of the component.",
       ],
     },
