--- a/src/pages/reference-react/organization-management/organization-profile.mdx
+++ b/src/pages/reference-react/organization-management/organization-profile.mdx
@@ -5,8 +5,6 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # `<OrganizationProfile />`
 
----
-
 <Images
   alt="Organization Profile Example"
   width={1024}
@@ -14,7 +12,7 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
   src="/images/ui-components/component-org_profile.svg"
 />
 
-The `<OrganizationProfile />` component is used to render a beautiful, full-featured organization management
+The `<OrganizationProfile />` component is used to render a beautiful, full-featured organization management
 UI that allows users to manage their organization profile and security settings.
 
 ## Usage
@@ -45,27 +43,29 @@ export default function OrganizationProfilePage() {
 
 ## Props
 
+All props below are optional.
+
 <Tables
   headings={["Name", "Type", "Description"]}
   rows={[
     {
       cells: [
-        "afterLeaveOrganizationUrl?",
-        "string",
+        <code>afterLeaveOrganizationUrl</code>,
+        <code>string</code>,
         "Full URL or path to navigate after leaving an organization.",
       ],
     },
     {
       cells: [
-        "path",
-        "string",
+        <code>path</code>,
+        <code>string</code>,
         "The path where the component is mounted when path-based routing is used. -e.g. /org-profile. This prop is ignored in hash and virtual based routing.",
       ],
     },
     {
       cells: [
-        "routing",
-        "RoutingStrategy",
+        <code>routing</code>,
+        <code>RoutingStrategy</code>,
         `The routing strategy for your pages. Supported values are:
 - hash (default): Hash based routing.
 - path: Path based routing.
@@ -74,8 +74,8 @@ export default function OrganizationProfilePage() {
     },
     {
       cells: [
-        "appearance",
-        "object",
+        <code>appearance</code>,
+        <code>object</code>,
         "Control the look and feel of the component.",
       ],
     },
