chore: standardize on function header text

--- a/src/pages/reference-js/authentication/sign-in.mdx
+++ b/src/pages/reference-js/authentication/sign-in.mdx
@@ -91,7 +91,7 @@ function mountSignIn(node: HTMLDivElement, props?: SignInProps): void;
   ]}
 />
 
-## `unmountSignIn`
+## `unmountSignIn()`
 
 Unmount and run cleanup on an existing SignIn component instance.
 
@@ -163,7 +163,7 @@ function unmountSignIn(node: HTMLDivElement): void;
   ]}
 />
 
-## `openSignIn`
+## `openSignIn()`
 
 Opens the SignIn component as an overlay at the root of your HTML `body` element.
 
@@ -224,7 +224,7 @@ function openSignIn(props?: SignInProps): void;
   ]}
 />
 
-## `closeSignIn`
+## `closeSignIn()`
 
 Closes the sign in overlay.
 
