--- a/src/pages/reference-js/authentication/sign-up.mdx
+++ b/src/pages/reference-js/authentication/sign-up.mdx
@@ -91,7 +91,7 @@ function mountSignUp(node: HTMLDivElement, props?: SignUpProps): void;
   ]}
 />
 
-## `unmountSignUp`
+## `unmountSignUp()`
 
 Unmount and run cleanup on an existing SignUp component instance.
 
@@ -163,7 +163,7 @@ function unmountSignUp(node: HTMLDivElement): void;
   ]}
 />
 
-## `openSignUp`
+## `openSignUp()`
 
 Opens the SignUp component as an overlay at the root of your HTML `body` element.
 
@@ -224,7 +224,7 @@ function openSignUp(props?: SignUpProps): void;
   ]}
 />
 
-## `closeSignUp`
+## `closeSignUp()`
 
 Closes the sign up overlay.
 
