--- a/src/pages/reference-js/organization-management/organization-profile.mdx
+++ b/src/pages/reference-js/organization-management/organization-profile.mdx
@@ -89,7 +89,7 @@ function mountOrganizationProfile(node: HTMLDivElement, props?: OrganizationProf
   ]}
 />
 
-## `unmountOrganizationProfile`
+## `unmountOrganizationProfile()`
 
 Unmount and run cleanup on an existing OrganizationProfile component instance.
 
@@ -161,7 +161,7 @@ function unmountOrganizationProfile(node: HTMLDivElement): void;
   ]}
 />
 
-## `openOrganizationProfile`
+## `openOrganizationProfile()`
 
 Opens the OrganizationProfile component as an overlay at the root of your HTML `body` element.
 
@@ -222,7 +222,7 @@ function openOrganizationProfile(props?: OrganizationProfileProps): void;
   ]}
 />
 
-## `closeOrganizationProfile`
+## `closeOrganizationProfile()`
 
 Closes the organization profile overlay.
 
@@ -270,7 +270,7 @@ Closes the organization profile overlay.
 function closeOrganizationProfile(): void;
 ```
 
-## `useOrganizationProfile`
+## `OrganizationProfileProps`
 
 All props below are optional.
 
