--- a/src/pages/reference-js/authentication/user-profile.mdx
+++ b/src/pages/reference-js/authentication/user-profile.mdx
@@ -88,7 +88,7 @@ function mountUserProfile(node: HTMLDivElement, props?: UserProfileProps): void;
   ]}
 />
 
-## `unmountUserProfile`
+## `unmountUserProfile()`
 
 Unmount and run cleanup on an existing UserProfile component instance.
 
@@ -160,7 +160,7 @@ function unmountUserProfile(node: HTMLDivElement): void;
   ]}
 />
 
-## `openUserProfile`
+## `openUserProfile()`
 
 Opens the UserProfile component as an overlay at the root of your HTML `body` element.
 
@@ -221,7 +221,7 @@ function openUserProfile(props?: UserProfileProps): void;
   ]}
 />
 
-## `closeUserProfile`
+## `closeUserProfile()`
 
 Closes the user profile overlay.
 
