docs: add create organization reference docs page

--- a/src/pages/reference-react/organization-management/create-organization.mdx
+++ b/src/pages/reference-react/organization-management/create-organization.mdx
@@ -39,31 +39,33 @@ export default function CreateOrganizationPage() {
   return <CreateOrganization />;
 }
 ```
-=======
 </CodeBlockTabs>
+
 ## Props
+
+All props below are optional.
 
 <Tables
   headings={["Name", "Type", "Description"]}
   rows={[
     {
       cells: [
-        "afterCreateOrganizationUrl?",
-        "string",
+        <code>afterCreateOrganizationUrl</code>,
+        <code>string</code>,
         "Full URL or path to navigate after creating a new organization.",
       ],
     },
     {
       cells: [
-        "path",
-        "string",
+        <code>path</code>,
+        <code>string</code>,
         "The path where the component is mounted when path-based routing is used. -e.g. /create-org. This prop is ignored in hash and virtual based routing.",
       ],
     },
     {
       cells: [
-        "routing",
-        "RoutingStrategy",
+        <code>routing</code>,
+        <code>RoutingStrategy</code>,
         `The routing strategy for your pages. Supported values are:
 - hash (default): Hash based routing.
 - path: Path based routing.
@@ -72,8 +74,8 @@ export default function CreateOrganizationPage() {
     },
     {
       cells: [
-        "appearance",
-        "object",
+        <code>appearance</code>,
+        <code>object</code>,
         "Control the look and feel of the component.",
       ],
     },
