--- a/src/pages/users/authentication-providers/overview.mdx
+++ b/src/pages/users/authentication-providers/overview.mdx
@@ -5,7 +5,7 @@ import {AuthProvidersCards} from "@/components/AuthProvidersCards";
 Clerk provides a wide range of application providers to ease your user's sign-up and sign-in processes.
 
 <div className="container mx-auto my-4">
-    <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+    <div className="grid justify-center gap-x-7 grid-cols-1 lg:grid-cols-2">
         <AuthProvidersCards title="Facebook" description="Add Facebook as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/facebook.svg" />
         <AuthProvidersCards title="Twitter" description="Add Twitter as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/twitter.svg" />
         <AuthProvidersCards title="TikTok" description="Add TikTok as an authentication provider for your Clerk app." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/auth_providers/tiktok.svg" />
