Add metadata and fix some other issues

--- a/src/pages/users/guides/sync-data-to-your-backend.mdx
+++ b/src/pages/users/guides/sync-data-to-your-backend.mdx
@@ -63,7 +63,7 @@ If you're using Next.js, you can create a webhook endpoint in the `pages/api` di
 Svix provides a package for verifying the webhook signature, making it easy to verify the authenticity of the webhook events.
 
 <CodeBlockTabs options={['npm', 'yarn', 'pnpm']}>
-  ```bash filename="your-project" copy
+  ```bash copy filename="your-project" copy
   npm install svix
   ```
 
