docs: add ClerkJS UserButton docs

--- a/src/pages/reference-react/authentication/user-button.mdx
+++ b/src/pages/reference-react/authentication/user-button.mdx
@@ -147,70 +147,81 @@ The `<UserButton/>` component is used to render the familiar user button UI popu
 
 ## Props
 
+All props below are optional.
+
 <Tables
   headings={["Name", "Type", "Description"]}
+  headingsMeta={[{}, {}, {maxWidth: "300px"}]}
   rows={[
   {
-  cells: ["appearance", "object", `Controls the overall look and feel.`],
+  cells: [<code>appearance</code>, <code>object</code>, `Controls the overall look and feel.`],
   },
   {
   cells: [
-  "showName",
-  "string",
+  <code>showName</code>,
+  <code>string</code>,
   `Controls if the user name is displayed next to the user image button.`,
   ],
   },
   {
   cells: [
-  "signInUrl",
-  "string",
+  <code>signInUrl</code>,
+  <code>string</code>,
   `The full URL or path to navigate to when the "Add another account" button is clicked.`,
   ],
   },
   {
   cells: [
-  "userProfileMode",
-  `"modal" | "navigation"`,
-  `Controls whether clicking the "Manage your account" button will cause the UserProfile component to open as a modal, or if the browser will navigate to the userProfileUrl where UserProfile is mounted as a page.`,
+  <code>userProfileMode</code>,
+  <code>"modal" | "navigation"</code>,
+  <>Controls whether clicking the "Manage your account" button will cause the <code>UserProfile</code> component to open as a modal, or if the browser will navigate to the <code>userProfileUrl</code> where <code>UserProfile</code> is mounted as a page.</>,
   ],
   },
   {
   cells: [
-  "userProfileUrl",
-  `string`,
+  <code>userProfileUrl</code>,
+  <code>string</code>,
   `The full URL or path leading to the user management interface.`,
   ],
   },
   {
   cells: [
-  "afterSignOutUrl",
-  "string",
+  <code>afterSignOutUrl</code>,
+  <code>string</code>,
   "The full URL or path to navigate to after a signing out from all accounts (applies to both single-session and multi-session apps)",
   ],
   },
   {
   cells: [
-  "afterMultiSessionSingleSignOutUrl",
-  "string",
+  <code>afterMultiSessionSingleSignOutUrl</code>,
+  <code>string</code>,
   "The full URL or path to navigate to after a signing out from currently active account (multisession apps).",
   ],
   },
   {
   cells: [
-  "afterSwitchSessionUrl",
-  "string",
+  <code>afterSwitchSessionUrl</code>,
+  <code>string</code>,
   "Full URL or path to navigate to after a successful account change (multi-session apps).",
   ],
   },
   {
   cells: [
-  "defaultOpen",
-  "string",
-  "Controls whether the <UserButton/> should open by default during the first render.",
+  <code>defaultOpen</code>,
+  <code>string</code>,
+  <>Controls whether the <code>{"<UserButton/>"}</code> should open by default during the first render.</>,
+  ],
+  },
+  {
+  cells: [
+  <code>userProfileProps</code>,
+  <code>object</code>,
+  <>
+  Specify options for the underlying <code>{"<UserProfile />"}</code> component.
+  <br/>
+  e.g. <code>{"{additionalOAuthScopes: {google: ['foo', 'bar'], github: ['qux']}}"}</code>
+  </>,
   ],
   },
   ]}
 />
-
-```
-```
