docs: add organization switcher ClerkJS docs

--- a/src/pages/reference-react/organization-management/organization-switcher.mdx
+++ b/src/pages/reference-react/organization-management/organization-switcher.mdx
@@ -56,38 +56,99 @@ export default function OrganizationSwitcherPage() {
 
 ## Props
 
+All props below are optional.
+
 <Tables
   headings={["Name", "Type", "Description"]}
   rows={[
     {
       cells: [
-        "afterCreateOrganizationUrl?",
-        "string",
+        <code>afterCreateOrganizationUrl</code>,
+        <code>string</code>,
         "Full URL or path to navigate after creating a new organization.",
       ],
     },
     {
       cells: [
-        "path",
-        "string",
-        "The path where the component is mounted when path-based routing is used. -e.g. /org-profile. This prop is ignored in hash and virtual based routing.",
-      ],
-    },
-    {
-      cells: [
-        "routing",
-        "RoutingStrategy",
-        `The routing strategy for your pages. Supported values are:
-- hash (default): Hash based routing.
-- path: Path based routing.
-- virtual: Virtual based routing.`,
-      ],
-    },
-    {
-      cells: [
-        "appearance",
-        "object",
+        <code>appearance</code>,
+        <code>object</code>,
         "Control the look and feel of the component.",
+      ],
+    },
+    {
+      cells: [
+        <code>createOrganizationUrl</code>,
+        <code>string</code>,
+        <>Full URL or path where the <code>{"<CreateOrganization />"}</code> component is mounted.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>organizationProfileUrl</code>,
+        <code>string</code>,
+        <>Full URL or path where the <code>{"<OrganizationProfile />"}</code> component is mounted.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>createOrganizationMode</code>,
+        <code>'modal' | 'navigation'</code>,
+        <>
+          Controls whether clicking the "Create organization" button will cause
+          the <code>CreateOrganization</code> component to open as a modal, or if the browser will navigate
+          to the <code>createOrganizationUrl</code> where <code>CreateOrganization</code> is mounted as a page.
+          <br/>
+          Defaults to: <code>"modal"</code>
+        </>,
+      ],
+    },
+    {
+      cells: [
+        <code>organizationProfileMode</code>,
+        <code>'modal' | 'navigation'</code>,
+        <>
+          Controls whether clicking the "Manage organization" button will cause
+          the <code>OrganizationProfile</code> component to open as a modal, or if the browser will navigate
+          to the <code>organizationProfileUrl</code> where <code>OrganizationProfile</code> is mounted as a page.
+          <br/>
+          Defaults to: <code>"modal"</code>
+        </>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterLeaveOrganizationUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate to after the user leaves the currently active organization.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>afterSwitchOrganizationUrl</code>,
+        <code>string</code>,
+        <>Full URL or path to navigate after a successful organization switch.</>,
+      ],
+    },
+    {
+      cells: [
+        <code>hidePersonal</code>,
+        <code>boolean</code>,
+        <>
+          By default, users can switch between organization and their personal account.
+          This option controls whether OrganizationSwitcher will include the user's personal account
+          in the organization list. Setting this to `false` will hide the personal account entry,
+          and users will only be able to switch between organizations.
+          <br/>
+          Defaults to: <code>true</code>
+        </>,
+      ],
+    },
+
+    {
+      cells: [
+        <code>defaultOpen</code>,
+        <code>boolean</code>,
+        <>Controls the default state of the <code>OrganizationSwitcher</code></>,
       ],
     },
   ]}
